recent files dialog

--- a/src/images/README
+++ b/src/images/README
@@ -1,4 +1,2 @@
-
-Many icons are taken from the open icon library (mostly from the chrystal theme):
-
-http://openiconlibrary.sourceforge.net/
+Most icons were taken from or based on the great oxygen icon library
+(http://www.oxygen-icons.org)
