Wave navigation, zooming and selection

--- a/src/images/README
+++ b/src/images/README
@@ -1,2 +1,4 @@
 Most icons were taken from or based on the great oxygen icon library
 (http://www.oxygen-icons.org)
+
+Others were taken from the high contrast theme of gnome.
